# kassir-desktop

./: .env  .env-old  .env.production  .gitattributes  .gitignore  README.md  agents.md  components.json  eslint-plugin-react-hooks.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-12a72e604d9ba2046d259ea5f6c8ee4173a534eb196b0d548e5fe21d0ee506ab.json  query-2e46b9a1b55662698a44a901a50b2546e60e13f55612ff3cd00a8f7594fae837.json  query-5854fbf36f53791b5f58e918bae6da04393cd8d84fe369d89e058e287161863e.json  query-9b35a19647037c574464132d54fa20171239d3c16d30dd7efc598b32e1e2cebf.json  query-d9ef25f31deea5d4a9c5657976932ae6224df2905e2a963f9a46413c98a4fd7a.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  jwt.rs  lib.rs  main.rs  migration-04.sql  migration-06.sql  migration-12.sql  migration-14.sql  migration-16.sql  migration-18.sql  migration.sql  migrations.rs  printer.rs
src-tauri/src/api/: mod.rs  product.rs  session.rs  sql.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/01-10/: migration-02.sql  migration-05.sql  migration-10.sql
src-tauri/src/database/11-20/: migration-19.sql
src-tauri/src/database/21-30/: migration-24.sql  migration-25.sql  migration-26.sql  migration-27.sql  migration-29.sql  migration-30.sql
src-tauri/src/database/31-40/: migration-32.sql  migration-33.sql  migration-36.sql  migration-37.sql  (+3 more)
src-tauri/src/transaction/: mod.rs
(+2160 files in other folders)
