[package]
name = "kassir"
version = "4.1.22"
description = "kassir-desktop"
authors = ["Muhammad Ali Syaifudin"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kassir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri-plugin-prevent-default = "4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8.0"
chrono = "0.4" # or latest
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
bcrypt = "0.17"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
